force-app/main/default/objects/Employee__c/Employee__c.object-meta.xml
<CustomObject>
    <label>מדריך</label>
    <nameField>
        <label>שם המדריך</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>מדריכים</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>