force-app/main/default/objects/Employee__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>YEAR(TODAY() ) - YEAR(  Date_Of_Birth__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>גיל</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>