force-app/main/default/objects/Employee__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>קוד אימות</label>
    <length>10</length>
    <type>Text</type>
</CustomField>