force-app/main/default/objects/Employee__c/fields/Course_Rate__c.field-meta.xml
<CustomField>
    <fullName>Course_Rate__c</fullName>
    <label>תעריף קורס</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <defaultValue>700</defaultValue>
</CustomField>