force-app/main/default/objects/Employee__c/fields/Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth__c</fullName>
    <label>תאריך לידה</label>
    <type>Date</type>
</CustomField>