force-app/main/default/objects/Employee__c/fields/Employee_Email__c.field-meta.xml
<CustomField>
    <fullName>Employee_Email__c</fullName>
    <label>מייל מדריך</label>
    <type>Email</type>
</CustomField>