force-app/main/default/objects/Employee__c/fields/Employee_Phone__c.field-meta.xml
<CustomField>
    <fullName>Employee_Phone__c</fullName>
    <label>טלפון</label>
    <type>Phone</type>
</CustomField>