force-app/main/default/objects/Employee__c/fields/Employee_Type__c.field-meta.xml
<CustomField>
    <fullName>Employee_Type__c</fullName>
    <label>סוג שכר</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>שעתי</fullName>
                <default>true</default>
                <label>שעתי</label>
            </value>
            <value>
                <fullName>חודשי</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>