force-app/main/default/objects/Employee__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <label>שם פרטי באנגלית</label>
    <length>25</length>
    <type>Text</type>
</CustomField>