force-app/main/default/objects/Employee__c/fields/Full_Day_Rate__c.field-meta.xml
<CustomField>
    <fullName>Full_Day_Rate__c</fullName>
    <label>תעריף יום מלא / חו״ל</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <defaultValue>590</defaultValue>
</CustomField>