force-app/main/default/objects/Employee__c/fields/Is_Strong_Password__c.field-meta.xml
<CustomField>
    <fullName>Is_Strong_Password__c</fullName>
    <defaultValue>false</defaultValue>
    <label>סיסמה חזקה פעילה</label>
    <type>Checkbox</type>
</CustomField>