force-app/main/default/objects/Employee__c/fields/Job_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Job_Percentage__c</fullName>
    <label>אחוז משרה</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>100</defaultValue>
</CustomField>