force-app/main/default/objects/Employee__c/fields/Login_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Login_Attempt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ניסיונות כניסה</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>