force-app/main/default/objects/Employee__c/fields/Monthly_Salary__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Salary__c</fullName>
    <label>שכר חודשי בסיס</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
</CustomField>