force-app/main/default/objects/Employee__c/fields/next_birthday__c.field-meta.xml
<CustomField>
    <fullName>next_birthday__c</fullName>
    <formula>IF(
  DATE(YEAR(TODAY()), MONTH( Date_Of_Birth__c ), DAY( Date_Of_Birth__c )) &gt;= TODAY(),
  DATE(YEAR(TODAY()), MONTH( Date_Of_Birth__c ), DAY( Date_Of_Birth__c )),
  DATE(YEAR(TODAY()) + 1, MONTH( Date_Of_Birth__c ), DAY( Date_Of_Birth__c ))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>next birthday</label>
    <type>Date</type>
</CustomField>