force-app/main/default/objects/Employee__c/fields/Rate_Club__c.field-meta.xml
<CustomField>
    <fullName>Rate_Club__c</fullName>
    <label>מועדון</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>70</defaultValue>
</CustomField>