force-app/main/default/objects/Employee__c/fields/Rate_Dock_Duty__c.field-meta.xml
<CustomField>
    <fullName>Rate_Dock_Duty__c</fullName>
    <label>תעריף שעתי - תורנות רציף</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <defaultValue>50</defaultValue>
</CustomField>