force-app/main/default/objects/Employee__c/fields/Rate_General__c.field-meta.xml
<CustomField>
    <fullName>Rate_General__c</fullName>
    <label>תעריף שעתי - כללי</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <defaultValue>70</defaultValue>
</CustomField>