force-app/main/default/objects/Employee__c/fields/Rate_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Rate_Maintenance__c</fullName>
    <label>אחזקה/תיקונים/ניקיון</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>50</defaultValue>
</CustomField>