force-app/main/default/objects/Employee__c/fields/Rate_Skipper__c.field-meta.xml
<CustomField>
    <fullName>Rate_Skipper__c</fullName>
    <label>תעריף שעתי - סקיפר</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>70</defaultValue>
</CustomField>