force-app/main/default/objects/Employee__c/fields/Strong_Password__c.field-meta.xml
<CustomField>
    <fullName>Strong_Password__c</fullName>
    <label>סיסמה חזקה</label>
    <length>255</length>
    <type>Text</type>
</CustomField>