force-app/main/default/objects/Employee__c/fields/Travel_Cost__c.field-meta.xml
<CustomField>
    <fullName>Travel_Cost__c</fullName>
    <label>עלות נסיעה ליום עבודה</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>25</defaultValue>
</CustomField>