force-app/main/default/objects/Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee_Phone__c</columns>
    <columns>Employee_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>iw</language>
</ListView>